JDKUnsafe will fallback when java.base/jdk.internal.misc is not exported